--- a/popup.html
+++ b/popup.html
@@ -2,18 +2,7 @@
 <html>
 <head>
   <title>Annotator Popup</title>
-  <style>
-    body {
-      width: 200px;
-    }
-    select, label {
-      width: 100%;
-      margin: 5px 0;
-    }
-    .note-category {
-      margin-bottom: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <label>
